src/chrome/komodo/skin/plat/shared/icons_rules.less
/* ... */
/* Icons that appear in menu's and misc places */
#buttonBrowserPreview
{
    list-style-image: @icon-browser-preview;
}

.save-all-buffers-icon
{
    list-style-image: @icon-save-all-buffers;
}

.cut-button, /* deprecated since Komodo 7 */.native-cut-icon
{
    list-style-image: @icon-cut;
}

.copy-button, /* deprecated since Komodo 7 */
.native-copy-icon
{
    list-style-image: @icon-copy;
}

.paste-button, /* deprecated since Komodo 7 */
.native-paste-icon
{
    list-style-image: @icon-paste;
}

.print-button, /* deprecated since Komodo 7 */
.native-print-icon
{
    list-style-image: @icon-print;
}

/* Use same image for checked as the button itself already has a toggle effect */
#pin-btn, #pin-btn[checked]
{
    list-style-image: @icon-pin;
}

.komodo-button-community
{
    list-style-image: @icon-community;
}

.komodo-button-maillist
{
    list-style-image: @icon-maillist;
}

.komodo-button-bugs
{
    list-style-image: @icon-bugs;
}

.tabs-select-button
{
    // override hover effect in debugger panel with !important
    list-style-image: @icon-tab-select !important;
}

.close-button,
#tabs-closebutton
{
    list-style-image: @icon-close;
}

.tab-arrowscrollbox
{
    .scrollbutton-up
    {
        list-style-image: @icon-tab-scroll-left;
    }
    .scrollbutton-down
    {
        list-style-image: @icon-tab-scroll-right;
    }

    &[orient="vertical"]
    {
        .scrollbutton-up
        {
            list-style-image: @icon-tab-scroll-up;
        }
        .scrollbutton-down
        {
            list-style-image: @icon-tab-scroll-down;
        }
    }

    .scrollbutton-up > image,
    .scrollbutton-down > image
    {
        -moz-appearance: none;
    }
}

#main-toolboxrow .overflow-toolbarbutton .toolbarbutton-icon
{
    list-style-image: @icon-toolbar-overflow;
}

/* Misc Specific Icons */

#php_debugger_config_status_image
{
    list-style-image: @icon-status-invalid;
}

#php_debugger_config_status_image[configured="true"]
{
    list-style-image: @icon-status-valid;
}

/* Images for the Diff Toolbar  */
.previous-diff-icon
{
    list-style-image: @icon-previous-diff;
}

.next-diff-icon
{
    list-style-image: @icon-next-diff;
}

.reveal-in-editor-icon
{
    list-style-image: @icon-reveal-in-editor;
}

.move-to-editor-icon
{
    list-style-image: @icon-move-to-editor;
}

.history-back-icon
{
    list-style-image: @icon-history-back;
}

.history-forward-icon
{
    list-style-image: @icon-history-forward;
}

/* Addon Icons */

.rx-icon
{
    list-style-image: @icon-addon-rx;
}

.http-inspector
{
    list-style-image: @icon-addon-http-inspector !important;
}

.ishell-icon
{
    list-style-image: @icon-addon-ishell !important;
}

#tb_tdkTclMenu
{
    list-style-image: @icon-addon-tcldevkit !important;
}

#tb_pdkPerlMenu
{
    list-style-image: @icon-addon-perldevkit !important;
}

/* SCC Icons */

// SCC overrides have !important because platform.less is included before SCC.css

.scc-button-menu
{
    list-style-image: @icon-addon-scc !important;
}

.scc-button-checkout
{
    list-style-image: @icon-addon-scc-checkout !important;
}

.scc-button-add
{
    list-style-image: @icon-addon-scc-add !important;
}

.scc-button-edit
{
    list-style-image: @icon-addon-scc-edit !important;
}

.scc-button-revert
{
    list-style-image: @icon-addon-scc-revert !important;
}

.scc-button-remove
{
    list-style-image: @icon-addon-scc-remove !important;
}

.scc-button-update
{
    list-style-image: @icon-addon-scc-update !important;
}

.scc-button-diff
{
    list-style-image: @icon-addon-scc-diff !important;
}

.scc-button-history
{
    list-style-image: @icon-addon-scc-history !important;
}

.scc-button-commit
{
    list-style-image: @icon-addon-scc-commit !important;
}

.scc-button-push
{
    list-style-image: @icon-addon-scc-push !important;
}

/* Debug Icons */

// Debug overrides have !important because platform.less is included before debugger.css

.debug-stepin-icon
{
    list-style-image: @icon-debug-stepin !important;
}

.debug-stepover-icon
{
    list-style-image: @icon-debug-stepover !important;
}

.debug-stepout-icon
{
    list-style-image: @icon-debug-stepout !important;
}

.debug-continue-icon
{
    list-style-image: @icon-debug-continue !important;
}

.debug-break-icon
{
    list-style-image: @icon-debug-break !important;
}

.debug-stop-icon
{
    list-style-image: @icon-debug-stop !important;
}

.debug-detach-icon
{
    list-style-image: @icon-debug-detach !important;
}

.debug-inspect-icon
{
    list-style-image: @icon-debug-inspect !important;
}

.dbg_status_icon[dbg_language]
{
    &[dbg_status="starting"]
    {
      list-style-image: @icon-debug-tab-starting !important;
    }
    &[dbg_status="running"]
    {
      list-style-image: @icon-debug-tab-running !important;
    }
    &[dbg_status="break"]
    {
      list-style-image: @icon-debug-tab-break !important;
    }
    &[dbg_status="stopping"]
    {
      list-style-image: @icon-debug-tab-stopping !important;
    }
    &[dbg_status="stopped"]
    {
      list-style-image: @icon-debug-tab-stopped !important;
    }
    &[dbg_status="interactive"]
    {
      list-style-image: @icon-debug-tab-interactive !important;
    }
}

#DebuggerPanelContent
{
    .show-hidden-vars-icon
    {
      list-style-image: @icon-debug-below-show-hidden !important;
    }
}

/* Unit Testing */

.edit-testplan-icon
{
    /* Requires !important due to hierarchy of platform.less - Bug #97665 */
    list-style-image: @icon-unittest-edit-plan !important;
}

/* Macro Icons */

.macro-play-icon
{
    list-style-image: @icon-macro-play !important;
}

.macro-pause-icon
{
    list-style-image: @icon-macro-pause !important;
}

.macro-record-icon
{
    list-style-image: @icon-macro-record !important;
}

.macro-stop-icon
{
    list-style-image: @icon-macro-stop !important;
}

.macro-save-icon
{
    list-style-image: @icon-macro-save !important;
}

/* Breakpoint Icons */

.breakpoint-icon
{
    list-style-image: @icon-breakpoint !important;
}
/* ... */

